# roll-your-own-irc-bot

./: LICENSE  README.md  roll-your-own-irc-bot.cabal  stack.yaml
exe/: bot-1-getting-started.hs  bot-2-talking-irc.hs  bot-3-a-simple-interpreter.hs  bot-4-roll-your-own-monad.hs  bot-5-extending-the-bot.hs
